Добавлена загрузка сохраненного черновика
